# week3-document-intelligence-refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  Dockerfile  LICENSE  README.md  interim_report.md  main.py  pyproject.toml
.refinery/: extraction_ledger.jsonl  fact_table.db
.refinery/pageindex/: 034f5cfe0ed23f4a.json  0c2ceedd7f50f8b2.json  170905ee5fba5ac2.json  19cb50a025b8f934.json  2b7cf3753e01ab50.json  43ac189f1711b90b.json  4e85c2e3181cee52.json  5a528989cedc01d2.json  6d9fc8fd54a1e099.json  725a3ef04eca4df2.json  767e4ccfd2dbe25e.json  9450523db07e89c9.json  96dd887d20b3b5f8.json  9769e63f2939c74f.json  ad72e1429fee8044.json  c2952e1b027144d3.json  c756a6257e794ee6.json  cadcf6a8c9db5e03.json  doc-index.json  e737cb6e1e84aa4d.json  edc181d495671076.json  ef98703faa478f45.json  f10a18c7cbae4808.json  f4b98b6c89e85859.json  f79fc1f13b0a84d6.json
.refinery/profiles/: 005237417a2d612f.json  034f5cfe0ed23f4a.json  0c2ceedd7f50f8b2.json  170905ee5fba5ac2.json  19a47826b7140671.json  19cb50a025b8f934.json  2b7cf3753e01ab50.json  43ac189f1711b90b.json  4e85c2e3181cee52.json  5a528989cedc01d2.json  6d9fc8fd54a1e099.json  725a3ef04eca4df2.json  767e4ccfd2dbe25e.json  80acf2ac43127f33.json  9450523db07e89c9.json  96dd887d20b3b5f8.json  9769e63f2939c74f.json  ad72e1429fee8044.json  c0711fff3577532c.json  c2952e1b027144d3.json  c756a6257e794ee6.json  (+7 more)
rubric/: extraction_rules.yaml
src/: __init__.py  main.py  provider_keys.py
tests/: test_chunking.py  test_confidence_scoring.py  test_indexer.py  test_provider_keys.py  test_query_agent.py  test_triage.py
(+22 files in other folders)
