[project]
name = "week3-document-intelligence-refinery"
version = "0.1.0"
description = "Production-grade 5-stage agentic pipeline for enterprise document intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "docling>=2.0",
    "chromadb>=0.5",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-community>=0.3",
    "google-generativeai>=0.8",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "Pillow>=10.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
refinery = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
